Registeration and Login

--- a/sterlingpro.assessment/appsettings.json
+++ b/sterlingpro.assessment/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SterlingProCommerce; Integrated Security=True; TrustServerCertificate=True;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "JwtSettings": {
+        "Key": "WhyGiveThisHugeTaskToSubmitIn24Hours?",
+        "ExpirationInHours": 2
+    },
+    "AllowedHosts": "*"
 }
